Paths.get(fileName) is now Path.of(fileName)